syntax = "proto3";
package empowerchain.plasticcredit;

option go_package = "github.com/empowerchain/empowerchain/x/plasticcredit/types";

message CollectorInfo {
  
  uint64 issuer_id = 1; 
  string metadata = 2; 
}
