syntax = "proto3";
package empowerchain.accesscontrol;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/EmpowerPlastic/empowerchain/x/accesscontrol";

// GenesisState defines the accesscontrol module's genesis state.
message GenesisState {
  repeated ModulePermStore perm_stores = 1 [(gogoproto.nullable) = false];
}

// All accesses for a given module
message ModulePermStore {
  // Name - will be used as a name for a PermStore
  string module_name = 1;

  // List of accesses
  repeated Access accesses = 2 [(gogoproto.nullable) = false];
}

// Single access consisting of permissioned address and msgType
// of the message it can invoke
message Access {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  string msg_type = 2;
}